--- a/style.css
+++ b/style.css
@@ -36,11 +36,11 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 body {
-  height: 100%;
+  min-height: 100vh;
 }
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+ 
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
@@ -69,6 +69,8 @@ body{
     display: grid;
     justify-content: center;
     align-items: center;
+    background-color: var(--Very-Dark-Blue);
+    
 }
 main{
     width: 500px;
@@ -101,7 +103,7 @@ border-radius: 5px;
 }
 article{
    border-radius: 5px;
-    background-color: pink;
+    background-color: var(--Dark-Blue);
 }
 .bar{
 grid-column: span 2;
@@ -117,6 +119,7 @@ grid-column: span 2;
 .paragraph-2{
     display: flex;
     justify-content: space-between;
+    color: var(--Pale-Blue);
 }
 .bar{
     font-size: var(--fs);
@@ -124,25 +127,62 @@ grid-column: span 2;
     padding-right: 2rem;
 }
 .bar span{
-    color: red;
+    color: var(--Pale-Blue);
     
 }
 h1{
     margin-top: 1rem;
     font-size: 11px;
+    color: var(--Grayish-Blue);
 }
 .progress-bar{
     width: 100%;
     height: 8px;
     margin-top: .5rem;
     margin-bottom: .3rem;
+    background-color: var(--Very-Dark-Blue);
+    border-radius: 50px;
+   
+}
+.progress-bar-2{
+    display: grid;
+    align-items: center;
+    position: relative;
+    width: 70%;
+    height: 8px;
+    margin-top: .5rem;
+    margin-bottom: .3rem;
+    border-radius: 50px;
     background-color: red;
+   
+}
+.round-bar{
+    position: absolute;
+    right: 0;
+    display: block;
+    width: 6px;
+    height: 6px;
+    margin-right: 1px;
+    border-radius: 50%;
+    background-color: var(--Pale-Blue);;
+}
+picture{
+    position: absolute;
+    z-index: -1;
+    
 }
 /* footer */
 .attribution { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 11px; 
+    height: 50px;
     text-align: center; 
+    margin-top: auto;
+   color: var(--Pale-Blue);
+    
 }
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: var(--Dark-Blue); 
 }
