--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --Gradient: hsl(6, 100%, 80%) to hsl(335, 100%, 65%);
+    --Gradient: hsl(6, 100%, 80%), hsl(335, 100%, 65%);
     --Pale-Blue: hsl(243, 100%, 93%);
     --Grayish-Blue: hsl(229, 7%, 55%);
     --Dark-Blue: hsl(228, 56%, 26%);
@@ -106,7 +106,28 @@ article{
     background-color: var(--Dark-Blue);
 }
 .bar{
+    position: relative;
 grid-column: span 2;
+}
+.data-left{
+    position: absolute;
+    top: -20px;
+    right: 40px;
+    width: 80px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background-color: var(--Pale-Blue);
+}
+.data-left  .span-1{
+    color: var(--Grayish-Blue);
+    font-size: 11px;
+}
+.data-left h2{
+    font-size: 16px;
+    color: black;
 }
 .top-image{
     margin: 1rem .5rem 0;
@@ -153,7 +174,7 @@ h1{
     margin-top: .5rem;
     margin-bottom: .3rem;
     border-radius: 50px;
-    background-color: red;
+    background-image: linear-gradient(var(--Gradient));
    
 }
 .round-bar{
